# waschplan

./: .gitignore  Cargo.toml  devenv.nix  flake.nix  package-lock.json  waschplan.nix  year_html.html
app/: package-lock.json  package.json
app/src/: App.tsx  index.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/: testJSON.json
app/src-tauri/src/: holidays.rs  html.rs  lib.rs  types.rs
app/src/assets/: custom.css  custom.scss
app/src/components/: Checkboxes.tsx  Floors.tsx  Holidays.tsx  LastToWash.tsx  Navbar.tsx  PlanCreation.tsx  Preview.tsx
backend/: Cargo.toml
backend/resources/: sample_config.json
backend/src/: html.rs  main.rs  types.rs
doc/: hosting.md
nix/: shell.nix
resources/: sample_config.json
src/: holidays.rs  html.rs  main.rs  types.rs
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/ui/: app.js  index.html  tsconfig.json
src-tauri/ui/src/: index.d.ts
src-tauri/ui/src/lib/: holidays.ts  house.ts
