[package]
name = "waschplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
datetime = "0.5.2"
build_html = "2.5.0"
reqwest = { version = "0.12.12", features = ["json"]}
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"]}
rust_iso3166 = "0.1.14"
